part3/main-app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  # namespace: dwk-main
  name: dwk-main-app
spec:
  type: NodePort
  selector:
    app: dwk-main-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
