part3/main-app/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # namespace: dwk-main
  name: dwk
  # annotations:
    # traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: dwk-main-app
            port:
             number: 2345
      - path: /pingpong
        pathType: ImplementationSpecific
        backend:
          service:
            name: dwk-ping-pong-app
            port:
             number: 80
